styles.css
*, .main {
    box-sizing: border-box;
}

body, html {
    margin: 0;
    padding: 0;
}

.main {
    display: grid;
    grid-template: 100vh / 40vw 60vw;
    justify-content: center;
    align-content: center;
}

.main > div {
    box-sizing: border-box;
}

/* Left Side */

img {
    width: 100%;
    height: 100vh;
}

.image {
    display: flex;
    position: relative;
}

.odin-tag {
    background-color: black;
    opacity: 60%;
    width: 100%;
    height: 20vh;

    position: absolute;
    top: 40%;
}

.photocred {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: black;
    opacity: 75%;
    width: 100%;
    height: 1.5rem;

    position: absolute;
    bottom: 0;

    color: white;
    text-align: center;
    line-height: -15px;
    font-size: small;
}

.photocred > a:visited,
.photocred > a:focus,
.photocred > a:active,
.photocred > a:hover {
    text-decoration: none;
    color: white;
}

/* Right Side */
input, label {
    display: block;
}

.info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.text {
    max-width: 80%;
    position: relative;
    bottom: 100px;
    left: 50px;
}

form {
    display: grid;
    grid-template: 1fr 1fr 1fr/ 1fr 1fr;

    position: relative;
    left: 50px;
}

.fname {
    grid-row: 1/2;
    grid-column: 1/2;
}

.lname {
    grid-row: 1/2;
    grid-column: 2/3;
}

.email {
    grid-row: 2/3;
    grid-column: 1/2;
}

.phone {
    grid-row: 2/3;
    grid-column: 2/3;
}

.password {
    grid-row: 3/4;
    grid-column: 1/2;
}

.confirm {
    grid-row: 3/4;
    grid-column: 2/3;
}

.login {
    position: relative;
    left: 50px;
    top: 15px;
}

